mediastack/jackett/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jackett-service
  namespace: mediastack
spec:
  selector:
    app: jackett
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9117
